[package]
name = "ngx_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
dotenv = "0.15"
sqlx = {version = "0.8", features = ["postgres", "runtime-tokio-rustls"]}
#sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

#[profile.release]
#opt-level = 'z'
#lto = true